Agregando lo necesario para poder bloquear el evento sismico seleccionado, asignando empleado responsable de cambio y creango un nuevo objeto de cambio estado para el evento sismico seleccionado.